--- a/app/views/employees/edit.html.erb
+++ b/app/views/employees/edit.html.erb
@@ -1,5 +1,7 @@
-<h1>Editing Employee</h1>
 
-<%= render 'form', employee: @employee %>
+<div>
+		<legend>Editing Employee</legend>
+		<%= render 'form', employee: @employee%>
+</div>
 
 <%= link_to 'Back', root_path %>
