--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,44 @@
-<h2>Sign up</h2>
-
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :name,
-                required: true,
-                autofocus: true ,
-                input_html: { autocomplete: "name" }%>
-    <%= f.input :email,
-                required: true,
-                autofocus: true ,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
+<div class="col-md-6 col-md-offset-3">
+  <div class="row">
+    <div class="contact-form">
+      <h2>Sign up</h2>
+      <div class="panel-body">
+        <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= f.error_notification %>
+          <div class="form-group">
+            <%= f.label :name %><br>
+            <%= f.input_field :name,
+                        required: true,
+                        autofocus: true ,
+                        input_html: { autocomplete: "name" }, class: "form-control" %>
+          </div>
+          <div class="form-group">
+            <%= f.label :email %><br>
+            <%= f.email_field :email,
+                        required: true,
+                        autofocus: true ,
+                        input_html: { autocomplete: "email" }, class: "form-control" %>
+          </div>
+          <div class="form-group">
+            <%= f.label :password %><br>
+            <%= f.password_field :password,
+                        required: true,
+                        hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                        input_html: { autocomplete: "new-password" }, class: "form-control" %>
+          </div>
+          <div class="form-group">
+            <%= f.label :password_confirmation %><br>
+            <%= f.password_field :password_confirmation,
+                        required: true,
+                        input_html: { autocomplete: "new-password" }, class: "form-control" %>
+          </div>
+          <div class="form-group">
+            <%= f.submit "Sign up", class: "btn btn-info" %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+    <br>
+    <%= render "devise/shared/links" %>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
