--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -1,9 +1,31 @@
-<%= simple_form_for @employee do |f| %>
-  <%= f.input :name %>
-  <%= f.input :email %>
-  <%= f.input :mobile %>
-  <%= f.input :hire_date %>
-  <%= f.button :submit %>
+<div class="col-md-6 col-md-offset-3">
+  <div class="row">
+    <div class="contact-form">
+      <div class="panel-body">
+		<%= simple_form_for @employee do |f| %>
+		  <div class="form-group">
+			  <%= f.label :name %><br />
+			  <%= f.input_field  :name, class: "form-control" %>
+		  </div>
+		  <div class="form-group">
+			  <%= f.label :email %><br />
+			  <%= f.input_field :email, class: "form-control"  %>
+		  </div>
+		  <div class="form-group">
+			  <%= f.label :mobile %><br />
+			  <%= f.input_field :mobile, class: "form-control"  %>
+		  </div>
+		  <div class="form-group">
+			  <%= f.label :hire_date %><br />
+			  <%= f.input_field :hire_date, class: "form-control"  %>
+		  </div>
+		  <div class="form-group">
+		  	<%= f.submit "Add Employee", class: "btn btn-info" %>
+		  </div>
+		<% end %>
+	  </div>
+	</div>
     <br>
-  <p>or <%= link_to 'Return', employees_path %> </p>
-<% end %>
+    <p>or <%= link_to 'Return', employees_path %> </p>
+  </div>
+</div>
